# oanda-client

./: .gitmodules  LICENSE  Makefile  oanda-client.code-workspace  pyproject.toml
oanda_client/: config.py  events.py  oanda.py
scripts/: test.sh
